--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,3 +11,98 @@ label {
   width: 100%;
   padding: 15px;
 }
+
+#components-layout-demo-fixed .logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(89, 38, 230, 0.2);
+  margin: 16px 24px 16px 0;
+  float: left;
+}
+.site-layout .site-layout-background {
+  background: #fff;
+}
+
+/* css Home */
+.navbar {
+  width: 100%;
+
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  justify-content: space-around;
+
+  margin-right: 20%;
+  z-index: 9;
+  padding: 20px;
+  background-color: white;
+}
+container-fluid {
+  background-color: orangered;
+}
+.mor {
+  padding-top: 8%;
+}
+a {
+  text-decoration: none;
+  font-family: initial;
+  font-size: xx-large;
+}
+.navbarcss {
+  width: 60%;
+
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  justify-content: space-around;
+
+  margin-right: 20%;
+  z-index: 9;
+  padding: 20px;
+  background-color: white;
+}
+.logodocgroup {
+  width: 300px;
+}
+.menu-items {
+  display: flex;
+  justify-content: space-between;
+  width: 18%;
+}
+.dropdown {
+  display: none;
+  text-decoration: none;
+  list-style-type: none;
+  position: relative;
+}
+.ref:hover .dropdown {
+  display: block;
+  position: absolute;
+  text-decoration: none;
+  background-color: white;
+}
+legend {
+  background-color: powderblue;
+  color: #fff;
+  padding: 3px 6px;
+}
+.footer {
+  background-color: powderblue;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  /* espacement au milieu */
+  width: 80%;
+  margin: 0px auto;
+  padding: 1%;
+}
+.fooo {
+  padding-left: 35%;
+
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
+  color: blanchedalmond;
+  text-align: center;
+}
